[tool.poetry]
name = "ps_photos"
version = "0.1.0"
description = ""
authors = ["Fred Yankowski <fcy@imsa.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
